# doot

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  example.doot.yaml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  executor.rs  ignore.rs  main.rs  plan.rs  resolver.rs  status.rs
src/store/: file.rs  link.rs  mod.rs
