[package]
name = "doot"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/onbjerg/doot"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/doot-v{ version }-{ target }{ archive-suffix }"
bin-dir = "doot{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
bpaf = { version = "0.9", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.4"
sha2 = "0.10"
glob = "0.3"
similar = { version = "2.3", features = ["inline"] }
hex = "0.4"
colored = "2.1"
syntect = "5.2"
log = "0.4"
env_logger = "0.11"
regex = "1.10"
shellexpand = "3.0"
dirs = "6.0"
