[package]
name = "doot"
version = "1.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/onbjerg/doot"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/doot-v{ version }-{ target }{ archive-suffix }"
bin-dir = "doot{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
bpaf = { version = "0.9", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
ignore = "0.4"
sha2 = "0.10"
similar = { version = "2.3", features = ["inline"] }
hex = "0.4"
colored = "3.1"
syntect = "5.2"
env_logger = "0.11"
shellexpand = "3.1"
dirs = "6.0"
